# alg-trading

./: .ev_risk_analysis.py.swp  README.md  analysis.py  candle_chart.py  correlation.py  ev_makers_analysis.py  ev_risk_analysis.py  five_day_chart.py  line_chart.py  mpt.py
portfolio_package/: README.md  setup.cfg
