[metadata]
name = example-pkg-t-markey
version = 0.0.1
author = tom m 
author_email = tom@tommail.com
description = Expected Portfolio returns
long_description = file: README.md
long_description_content_type = text/markdown
url = https://google.com
project_urls =
    Bug Tracker = https://google.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src







